--- a/aws-pgd-3-nodes-camo/01_provision/templates/infrastructure.yml.j2
+++ b/aws-pgd-3-nodes-camo/01_provision/templates/infrastructure.yml.j2
@@ -45,7 +45,18 @@ aws:
         type: gp3
         size_gb: 1000
         iops: 3000
-        encrypted: false     
+        encrypted: false
+      additional_volumes:
+        - mount_point: /pgdata
+          size_gb: {{ pgdata_storage_size }}
+          type: {{ pgdata_storage_type }}
+          iops: {{ pgdata_storage_iops }}
+          encrypted: false
+        - mount_point: /pgwal
+          size_gb: {{ pgwal_storage_size }}
+          type: {{ pgwal_storage_type }}
+          iops: {{ pgwal_storage_iops }}
+          encrypted: false
     pgd2:
       image_name: postgres
       tags:
